<resources>
    <string name="app_name">ResusRunner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="basic_life_support">BASIC LIFE SUPPORT</string>
    <string name="attention"><b>1.</b> ATTENTION</string>
    <string name="asses_scene">Assess Scene</string>
    <string name="asses_desc">Check the surrounding area for danger.</string>
    <string name="check_life_signs">Check Life\nSigns</string>
    <string name="check_life_signs_desc">Check for response or abnormal breathing.</string>
    <string name="get_help">Get Help!</string>
    <string name="get_help_desc">Call 911, shout for help and send for defibrilator.</string>
    <string name="start_code">START CODE</string>
    <string name="code_history">CODE HISTORY</string>
    <string name="login">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="signin">SIGN IN</string>
    <string name="no_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="signup">SIGN UP</string>
    <string name="create_your_account">CREATE YOUR ACCOUNT</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>
    <string name="already_have">ALREADY HAVE ACCOUNT?</string>
    <string name="login_here">LOGIN HERE</string>
    <string name="begin_cpr">2. BEGIN CPR</string>
    <string name="open_airway">Open AIRWAY, check BREATHING</string>
    <string name="open_airway_desc">Push chin up and tilt head back. Clear any obstructions with finger seep.</string>
    <string name="breaths">Breaths 2x</string>
    <string name="breaths_desc">If not breathing, give 2 BREATHS that make chest rise.\nUse pocket mask or bag-valve-mask.</string>
    <string name="pulse_question">Do you DEFINITELY feel pulse within 10 seconds?</string>
    <string name="yes_pulse_desc">Case "YES": Give 1 breath every 5 to 6 seconds. Recheck pulse every 2 minutes.</string>
    <string name="compression">Compression 30x</string>
    <string name="compression_desc">Case "NO": Give cycles of 30 COMPRESSIONS and 2 BREATHS until AED/defibrilator arrives, ALS providers take over, or victim starts to move. \nPush hard and fast (100/min) and release completely. Minimize interuptions in compressions.</string>
    <string name="pulse">3. IF NO RESPONSE, CHECK PULSE</string>
    <string name="aed_defibrilator">4. AED/DEFIBRILATOR ARRIVES</string>
    <string name="aed_question">Check Rhythm is it shockable?</string>
    <string name="yes_aed_desc">Case "Shockable": Give 1 shock. Resume CPR immediately for 5 cycles.</string>
    <string name="shockable">SHOCKABLE</string>
    <string name="non_shockable">NON-SHOCKABLE</string>
    <string name="non_aed_desc">Case "Non-Shockable": Resume CPR immediately for 5 cycles. Check rhythm every 5 cycles; continue until ALS providers take over or victim starts to move.</string>
    <string name="temperature">TEMPERATURE:</string>
    <string name="pulse_title">PULSE:</string>
    <string name="respiration_title">RESPIRATION:</string>
    <string name="gcs_title">GCS:</string>
    <string name="saturations_title">SATURATIONS:</string>
    <string name="blood_pressure_title">BLOOD PRESSURE:</string>
    <string name="rhytm_title">RHYTHMN:</string>
    <string name="drug_title">DRUG:</string>
    <string name="start_cpr">START CPR</string>
    <string name="end_cpr">END CPR</string>
    <string name="end_code">END CODE</string>
    <string name="check_pulse">CHECK PULSE</string>
    <string name="shock">SHOCK</string>
    <string name="drugs">DRUGS</string>
    <string name="resources">RESOURCES</string>
    <string name="airway">AIRWAY</string>
    <string name="log">LOG</string>
    <string name="event">EVENT</string>
    <string name="code_time">CODE TIME</string>
    <string name="real_time">REAL TIME</string>
    <string name="search">SEARCH</string>
    <string name="bottom_msg">DONT FORGET YOUR H\'S AND T\'S</string>
    <string name="temperature_no_semicolons">TEMPERATURE</string>
    <string name="farenheit">\u00B0F</string>
    <string name="celsius">\u00B0C</string>
    <string name="pulse_no_semicolons">PULSE</string>
    <string name="respiration_no_semicolons">RESPIRATION</string>
    <string name="gcs_no_semicolons">GCS</string>
    <string name="saturations_no_semicolons">SATURATIONS</string>
    <string name="blood_pressure_no_semicolons">BLOOD PRESSURE</string>
    <string name="rhytmn_no_semicolons">RHYTMN</string>
    <string name="drug_no_semicolons">DRUG</string>
    <string name="confirm">CONFIRM</string>
    <string name="circulation">CIRCULATION</string>
    <string name="disability">DISABILITY</string>
    <string name="exposure">EXPOSURE</string>
    <string name="further_interventions">FURTHER INTERVENTIONS</string>
    <string name="breathing">BREATHING</string>
    <string name="joules">JOULES</string>
    <string name="rate">RATE</string>
    <string name="mamp">mAMP</string>
    <string name="bottom_text">Don\'t forget your Hs and Ts: Hypoxia, hypervagal, hypovolemia, hyper\/hypokalemia, hydrogen ion (academia), hypothermia, hypoglicemia, Malignant hyperthermia; Ts: Tamponade, tension pneumothorax, Trauma, Thrombosis, coronary or pulmonary embolus, QT prolongation, Toxins, pulmonary hypertension</string>
    <string name="rhytmn_vt_vf">VT/VF</string>
    <string name="rhytmn_pea">PEA/Asystole</string>
    <string name="rhytmn_bradycardia">Bradycardia</string>
    <string name="rhytmn_idioventricular">Idioventricular Junctional rhythm</string>
    <string name="rhytmn_heart_block">Complete Heart block</string>
    <string name="rhytmn_first_hb">1st deg HB</string>
    <string name="rhytmn_second_block_type">2nd degree block Type1/Type2</string>
    <string name="rhytmn_tachycardia">Tachycardia</string>
    <string name="rhytmn_sinus">Sinus tachycardia</string>
    <string name="rhytmn_svt">SVT</string>
    <string name="rhytmn_svt_aberancy">SVT w/ aberrancy</string>
    <string name="rhytmn_ventricular">Ventricular tachycardia</string>
    <string name="rhytmn_flutter">A fib/A. Flutter</string>
    <string name="rhytmn_stemi">STEMI/NSTEMI</string>
    <string-array name="airway_entries">
        <item>AIRWAY DEVICES</item>
        <item>Bag - Mask - Ventilation (LPM)</item>
        <item>Combitude</item>
        <item>Endotracheal Tube</item>
        <item>Face Mask (LPM)</item>
        <item>Laryngeal Mask Airway</item>
        <item>Nasal Cannula (LPM)</item>
        <item>Nasopharyngeal Airway</item>
        <item>Non-rebreather Mask (LPM)</item>
        <item>Oropharrengeal Array</item>
        <item>Venturi Mask</item>
        <item>Video Laryngoscope</item>
        <item>Other</item>
        <item>LAB TESTS</item>
        <item>ABG</item>
        <item>Other</item>
        <item>VENTILATOR SETTINGS</item>
        <item>BiPAP</item>
        <item>CPAP</item>
        <item>Vent Mode</item>
        <item>Other</item>
    </string-array>
    <string-array name="breathing_entries">
        <item>Rest Rate (RR)</item>
        <item>SaO2</item>
        <item>Breath Sounds Present</item>
        <item>TESTS</item>
        <item>Chest X-RAY (CXR)</item>
        <item>CT Chest (CT)</item>
    </string-array>
    <string-array name="circulation_entries">
        <item>LINES</item>
        <item>Place IV</item>
        <item>Place IO</item>
        <item>Place IA</item>
        <item>Place CVL</item>
        <item>MEDICATIONS</item>
        <item>Administer Drug</item>
        <item>Administer Fluids</item>
        <item>Administer Blood and Blood Products</item>
    </string-array>
    <string-array name="disability_entries">
        <item>GCS</item>
        <item>Eye Response</item>
        <item>Verbal Response</item>
        <item>Motor Response</item>
        <item>Output</item>
        <item>AVPU</item>
        <item>Select...</item>
        <item>EYES</item>
        <item>Pupils</item>
        <item>Eye Movement</item>
        <item>REFLEXES</item>
        <item>Gag Reflex</item>
        <item>Other Reflexes</item>
        <item>COMA &amp; SEIZURE</item>
        <item>Coma</item>
        <item>Seizure</item>
    </string-array>
    <string-array name="exposure_entries">
        <item>Scalp</item>
        <item>HEENT</item>
        <item>C-Spine</item>
        <item>Chest</item>
        <item>Abdomen</item>
        <item>Pelvis</item>
        <item>GU</item>
        <item>Upper Extermities</item>
        <item>Lower Extermities</item>
        <item>Back</item>
        <item>Anal Wink \/ Clench Buttocks</item>
    </string-array>
    <string-array name="further_intervensions_entries">
        <item>Place Foley</item>
        <item>Place Nasogastric Tube</item>
    </string-array>
    <string-array name="drug_names">
        <item>Adenosine</item>
        <item>Alteplase</item>
        <item>Amiodarone</item>
        <item>Atropine</item>
        <item>Calcium Chloride</item>
        <item>Calcium gluconate</item>
        <item>Cisatracurium (Nimbex)</item>
        <item>Clexane</item>
        <item>Clopidogrel</item>
        <item>Diazepam</item>
        <item>Digoxin</item>
        <item>Diltiazem</item>
        <item>Dobutamine</item>
        <item>Dopamine</item>
        <item>Epinephrine</item>
        <item>Eptifibatide</item>
        <item>Esmolol</item>
        <item>Etomidate</item>
        <item>Fentanyl (IM, IV)</item>
        <item>Flumazenil</item>
        <item>Fosphenytoin(IV/IM)</item>
        <item>Glucagon</item>
        <item>Hydrocortisone</item>
        <item>Ibutilide</item>
        <item>Inamrinone</item>
        <item>Isoproterenol</item>
        <item>Ketamine</item>
        <item>Labetolol</item>
        <item>Lidocaine</item>
        <item>Lorazepam (IV/IO/buccal/PR)</item>
        <item>Magnesium</item>
        <item>Mannitol</item>
        <item>Metoprolol</item>
        <item>Midazolam</item>
        <item>Naloxone</item>
        <item>Nicardipine</item>
        <item>Sodium nitroprusside </item>
        <item>Norepinephrine</item>
        <item>Pancuronium</item>
        <item>Paraldehyde‡ (PR)</item>
        <item>Phenobarbital† IV/IO</item>
        <item>Phenylephrine</item>
        <item>Phenytoin* (IV)</item>
        <item>Prednisone</item>
        <item>Procainamide</item>
        <item>Propofol</item>
        <item>Propofol</item>
        <item>Reteplase</item>
        <item>Reteplase</item>
        <item>Rocuronium</item>
        <item>Succinylcholine</item>
        <item>Tenecteplase</item>
        <item>Vasopressin</item>
        <item>Vecuronium(Norcuron®)</item>
        <item>Verapamil</item>
        <item>Potassium (KCL)</item>
        <item>Bicarbonate 1.26%</item>
        <item>Bicarbonate 8.4%</item>
    </string-array>
</resources>