<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:layout_marginLeft="10dp"
    android:background="@drawable/oval_white_layout_background">
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_start_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start_code"
            android:background="@drawable/red_rectangle_button"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="22sp"
            android:onClick="StartCode"/>
        <TextView
            android:id="@+id/title_code_history"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/code_history"
            android:background="@drawable/navy_rectangle_button"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="22sp"
            android:onClick="StartCodeHistory"/>
    </LinearLayout>
    <View
        android:id="@+id/line"
        android:layout_below="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <ScrollView
        android:layout_below="@+id/line"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:scrollbars="none"
        android:layout_above="@+id/bottom_message"
        android:layout_height="fill_parent">
        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/signup"
                android:visibility="gone"
                android:textColor="@color/lighter_blue"/>
            <TextView
                android:id="@+id/tv_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_your_account"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:textColor="@color/navy_blue"/>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:textColor="@color/lighter_blue"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:gravity="left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:gravity="left"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/confirm_pass_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_confirm_pass"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pass"
                    android:gravity="left"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <TextView
                android:id="@+id/title_sign_in"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:background="@drawable/blue_rectangle_button"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/bottom_message"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <TextView
            android:id="@+id/account_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/no_account"/>
        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:onClick="ShowSignUp"
            android:text="@string/create_account"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:onClick="ShowLogin"
            android:text="@string/login_here"/>
    </LinearLayout>
</RelativeLayout>