<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/rhytmn_popup"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/oval_navy_rectangle_layout"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/rhytmn_vt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@drawable/transparent_rectangle_button"
                android:textColor="@android:color/white"
                android:text="@string/rhytmn_vt_vf"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/dark_blue_main"/>
            <TextView
                android:id="@+id/rhytmn_pea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:text="@string/rhytmn_pea"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/dark_blue_main"/>
            <TextView
                android:id="@+id/rhytmn_bradycardia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:onClick="OpenBradycardiaLayout"
                android:text="@string/rhytmn_bradycardia"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/dark_blue_main"/>
            <LinearLayout
                android:id="@+id/bradycardia_layout"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rhytmn_idiovenricular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/rhytmn_idioventricular"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
                <TextView
                    android:id="@+id/rhytmn_heart_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_heart_block"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
                <TextView
                    android:id="@+id/rhytmn_first_hb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_first_hb"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
                <TextView
                    android:id="@+id/rhytmn_second_block_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_second_block_type"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
            </LinearLayout>
            <TextView
                android:id="@+id/rhytmn_tachycardia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:onClick="OpenTachycardiaLayout"
                android:text="@string/rhytmn_tachycardia"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/dark_blue_main"/>
            <LinearLayout
                android:id="@+id/tachycardia_layout"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rhytmn_sinus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_sinus"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
                <TextView
                    android:id="@+id/rhytmn_svt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_svt"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
                <TextView
                    android:id="@+id/rhytmn_svt_aberancy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_svt_aberancy"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
                <TextView
                    android:id="@+id/rhytmn_ventricular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_ventricular"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
                <TextView
                    android:id="@+id/rhytmn_flutter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/rhytmn_flutter"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/dark_blue_main"/>
            </LinearLayout>
            <TextView
                android:id="@+id/rhytmn_stemi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:text="@string/rhytmn_stemi"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/dark_blue_main"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>