<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/navy_blue"
        android:text="@string/attention"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:padding="10dp">
            <TextView
                android:id="@+id/tv_assess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asses_scene"
                android:textSize="18sp"
                android:lines="2"
                android:layout_gravity="center"
                android:gravity="center" />
            <TextView
                android:id="@+id/asses_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:lines="3"
                android:gravity="center"
                android:text="@string/asses_desc" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_alert"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:padding="10dp">
            <TextView
                android:id="@+id/tv_check_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_life_signs"
                android:textSize="18sp"
                android:lines="2"
                android:layout_gravity="center"
                android:gravity="center" />
            <TextView
                android:id="@+id/tv_check_life_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:lines="3"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/check_life_signs_desc" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_eye" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="10dp"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/tv_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_help"
                android:textSize="18sp"
                android:lines="2"
                android:layout_gravity="center"
                android:gravity="center" />
            <TextView
                android:id="@+id/tv_help_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:lines="3"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/get_help_desc" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_call"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>